docs-archive/apache-airflow-providers-standard/0.4.0/_sources/_api/airflow/providers/standard/operators/trigger_dagrun/index.rst.txt
airflow.providers.standard.operators.trigger_dagrun
===================================================

.. py:module:: airflow.providers.standard.operators.trigger_dagrun


Attributes
----------

.. autoapisummary::

   airflow.providers.standard.operators.trigger_dagrun.XCOM_LOGICAL_DATE_ISO
   airflow.providers.standard.operators.trigger_dagrun.XCOM_RUN_ID


Exceptions
----------

.. autoapisummary::

   airflow.providers.standard.operators.trigger_dagrun.DagIsPaused


Classes
-------

.. autoapisummary::

   airflow.providers.standard.operators.trigger_dagrun.TriggerDagRunLink
   airflow.providers.standard.operators.trigger_dagrun.TriggerDagRunOperator


Module Contents
---------------

.. py:data:: XCOM_LOGICAL_DATE_ISO
   :value: 'trigger_logical_date_iso'


.. py:data:: XCOM_RUN_ID
   :value: 'trigger_run_id'


.. py:exception:: DagIsPaused(dag_id)

   Bases: :py:obj:`airflow.exceptions.AirflowException`


   Raise when a dag is paused and something tries to run it.


   .. py:attribute:: dag_id


   .. py:method:: __str__()

      Return str(self).



.. py:class:: TriggerDagRunLink

   Bases: :py:obj:`airflow.sdk.BaseOperatorLink`


   Operator link for TriggerDagRunOperator.

   It allows users to access DAG triggered by task using TriggerDagRunOperator.


   .. py:attribute:: name
      :value: 'Triggered DAG'


      Name of the link. This will be the button name on the task UI.



   .. py:method:: get_link(operator, *, ti_key)

      Link to external system.

      :param operator: The Airflow operator object this link is associated to.
      :param ti_key: TaskInstance ID to return link for.
      :return: link to external system



.. py:class:: TriggerDagRunOperator(*, trigger_dag_id, trigger_run_id = None, conf = None, logical_date = NOTSET, reset_dag_run = False, wait_for_completion = False, poke_interval = 60, allowed_states = None, failed_states = None, skip_when_already_exists = False, fail_when_dag_is_paused = False, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`


   Triggers a DAG run for a specified DAG ID.

   Note that if database isolation mode is enabled, not all features are supported.

   :param trigger_dag_id: The ``dag_id`` of the DAG to trigger (templated).
   :param trigger_run_id: The run ID to use for the triggered DAG run (templated).
       If not provided, a run ID will be automatically generated.
   :param conf: Configuration for the DAG run (templated).
   :param logical_date: Logical date for the triggered DAG (templated).
   :param reset_dag_run: Whether clear existing DAG run if already exists.
       This is useful when backfill or rerun an existing DAG run.
       This only resets (not recreates) the DAG run.
       DAG run conf is immutable and will not be reset on rerun of an existing DAG run.
       When reset_dag_run=False and dag run exists, DagRunAlreadyExists will be raised.
       When reset_dag_run=True and dag run exists, existing DAG run will be cleared to rerun.
   :param wait_for_completion: Whether or not wait for DAG run completion. (default: False)
   :param poke_interval: Poke interval to check DAG run status when wait_for_completion=True.
       (default: 60)
   :param allowed_states: Optional list of allowed DAG run states of the triggered DAG. This is useful when
       setting ``wait_for_completion`` to True. Must be a valid DagRunState.
       Default is ``[DagRunState.SUCCESS]``.
   :param failed_states: Optional list of failed or disallowed DAG run states of the triggered DAG. This is
       useful when setting ``wait_for_completion`` to True. Must be a valid DagRunState.
       Default is ``[DagRunState.FAILED]``.
   :param skip_when_already_exists: Set to true to mark the task as SKIPPED if a DAG run of the triggered
       DAG for the same logical date already exists.
   :param fail_when_dag_is_paused: If the dag to trigger is paused, DagIsPaused will be raised.
   :param deferrable: If waiting for completion, whether or not to defer the task until done,
       default is ``False``.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('trigger_dag_id', 'trigger_run_id', 'logical_date', 'conf', 'wait_for_completion',...



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#ffefeb'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: trigger_dag_id


   .. py:attribute:: trigger_run_id
      :value: None



   .. py:attribute:: conf
      :value: None



   .. py:attribute:: reset_dag_run
      :value: False



   .. py:attribute:: wait_for_completion
      :value: False



   .. py:attribute:: poke_interval
      :value: 60



   .. py:attribute:: skip_when_already_exists
      :value: False



   .. py:attribute:: fail_when_dag_is_paused
      :value: False



   .. py:attribute:: logical_date


   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)


